--- a/html/mywebistefront/mywebsite/package.json
+++ b/html/mywebistefront/mywebsite/package.json
@@ -12,11 +12,15 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
-    "@mui/material": "^5.15.19",
-    "next": "^14.2.3",
+    "@mui/material": "^5.15.20",
+    "@mui/x-date-pickers": "^7.7.0",
+    "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.51.5"
+    "react-hook-form": "^7.52.0",
+    "dayjs":"^1.11.11",
+    "sqlite":"^5.1.1",
+    "sqlite3":"^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,9 +28,9 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
