--- a/html/mywebistefront/mywebsite/package.json
+++ b/html/mywebistefront/mywebsite/package.json
@@ -18,9 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "dayjs": "^1.11.13",
-    "sqlite":"^5.1.1",
-    "sqlite3":"^5.1.7"
+    "dayjs": "^1.11.13"
   },
   "devDependencies": {
     "@types/node": "^22",
