--- a/html/mywebistefront/mywebsite/package.json
+++ b/html/mywebistefront/mywebsite/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fontsource/roboto": "^5.1.0",
     "@mui/material": "^6.1.9",
     "@mui/x-date-pickers": "^7.22.3",
-    "@next/swc-android-arm64": "^13.2.4",
+    "babel-loader": "^9.2.1",
     "dayjs": "^1.11.13",
     "next": "^15.0.3",
     "react": "^18.3.1",
