--- a/html/mywebistefront/mywebsite/package.json
+++ b/html/mywebistefront/mywebsite/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.9",
     "@mui/x-date-pickers": "^7.22.3",
     "babel-loader": "^9.2.1",
