--- a/html/mywebistefront/mywebsite/package.json
+++ b/html/mywebistefront/mywebsite/package.json
@@ -25,7 +25,8 @@
     "next": "^15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.0"
+    "react-hook-form": "^7.54.0",
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "@types/node": "^22",
