--- a/html/mywebsite/package.json
+++ b/html/mywebsite/package.json
@@ -1,8 +1,10 @@
 {
   "name": "mywebsite",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
+    "postinstall": "node scripts/apply-overrides.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "lightningcss": "^1.29.3",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
@@ -23,13 +26,22 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "20.17.32",
+    "@types/react": "19.1.2",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8",
-    "typescript": "^5"
+    "typescript": "5.8.3"
+  },
+  "optionalDependencies": {
+    "lightningcss.android-arm64.node": "^1.29.3-1",
+    "lightningcss-win32-x64-msvc": "^1.29.3"
+  },
+  "overrides": {
+    "@tailwindcss/node": {
+      "lightningcss": "npm:lightningcss.android-arm64.node"
+    }
   }
 }
